my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ELOGGROUPS/ELOGGROUPS.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ELOGGROUPS.dml:24:1: error ELOGGROUPS: Too many loggroup declarations. A maximum of 63 log groups (61 excluding builtins) may be declared per device.
C:\Users\nagen\simics-projects\my-intel-simics-project-1\win64\bin\dml\1.4\dml-builtins.dml:11:1: error ELOGGROUPS: Too many loggroup declarations. A maximum of 63 log groups (61 excluding builtins) may be declared per device.
C:\Users\nagen\simics-projects\my-intel-simics-project-1\win64\bin\dml\1.4\dml-builtins.dml:12:1: error ELOGGROUPS: Too many loggroup declarations. A maximum of 63 log groups (61 excluding builtins) may be declared per device.
